--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -1,6 +1,6 @@
-<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
-<xliff version="1.0">
-	<file source-language="en" target-language="de" datatype="plaintext" original="messages" date="2018-07-27T10:11:03Z">
+<?xml version="1.0" encoding="utf-8"?>
+<xliff version="1.0" xmlns="urn:oasis:names:tc:xliff:document:1.1">
+	<file source-language="en" target-language="de" datatype="plaintext" original="EXT:webcare/Resources/Private/Language/locallang.xlf" date="2018-07-27T10:11:03Z" product-name="webcare">
 		<header/>
 		<body>
 			<trans-unit id="privacyStatement">
