--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -1,13 +1,25 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <xliff version="1.0" xmlns="urn:oasis:names:tc:xliff:document:1.1">
-	<file source-language="en" datatype="plaintext" original="EXT:webcare/Resources/Private/Language/locallang.xlf" date="2018-07-27T10:11:03Z" product-name="webcare">
-		<header/>
+	<file source-language="en" original="EXT:webcare/Resources/Private/Language/locallang.xlf" product-name="webcare" date="2020-05-14T11:48:56+02:00">
+		<header></header>
 		<body>
+			<trans-unit id="imprint" resname="imprint">
+				<source>Imprint from WebCare</source>
+			</trans-unit>
+			<trans-unit id="imprint_wizard_description" resname="imprint_wizard_description">
+				<source>Lets you insert your imprint in this place.</source>
+			</trans-unit>
+			<trans-unit id="imprint_wizard_title" resname="imprint_wizard_title">
+				<source>Imprint from WebCare</source>
+			</trans-unit>
 			<trans-unit id="privacyStatement" resname="privacyStatement">
 				<source>Privacy Statement from WebCare</source>
 			</trans-unit>
-			<trans-unit id="imprint" resname="imprint">
-				<source>Imprint from WebCare</source>
+			<trans-unit id="privacy_statement_wizard_description" resname="privacy_statement_wizard_description">
+				<source>Lets you insert your privacy statement in this place.</source>
+			</trans-unit>
+			<trans-unit id="privacy_statement_wizard_title" resname="privacy_statement_wizard_title">
+				<source>Privacy Statement from WebCare</source>
 			</trans-unit>
 			<trans-unit id="tsconsteditor_webcare" resname="tsconsteditor_webcare">
 				<source>WebCare</source>
@@ -15,23 +27,14 @@
 			<trans-unit id="tsconsteditor_webcare_clientId" resname="tsconsteditor_webcare_clientId">
 				<source>Your client ID</source>
 			</trans-unit>
+			<trans-unit id="tsconsteditor_webcare_initializeCookieConsent" resname="tsconsteditor_webcare_initializeCookieConsent">
+				<source>Automatically enable cookie consent: You may disable this option to initialize the consent manually via JavaScript. [window.cookieconsent.initialise(dr_cookiebanner_options)]</source>
+			</trans-unit>
 			<trans-unit id="tsconsteditor_webcare_organizationId" resname="tsconsteditor_webcare_organizationId">
 				<source>Your organization ID</source>
 			</trans-unit>
 			<trans-unit id="tsconsteditor_webcare_websiteId" resname="tsconsteditor_webcare_websiteId">
 				<source>The website ID (optional)</source>
-			</trans-unit>
-			<trans-unit id="privacy_statement_wizard_title" resname="privacy_statement_wizard_title">
-				<source>Privacy Statement from WebCare</source>
-			</trans-unit>
-			<trans-unit id="privacy_statement_wizard_description" resname="privacy_statement_wizard_description">
-				<source>Lets you insert your privacy statement in this place.</source>
-			</trans-unit>
-			<trans-unit id="imprint_wizard_title" resname="imprint_wizard_title">
-				<source>Imprint from WebCare</source>
-			</trans-unit>
-			<trans-unit id="imprint_wizard_description" resname="imprint_wizard_description">
-				<source>Lets you insert your imprint in this place.</source>
 			</trans-unit>
 		</body>
 	</file>
