--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -1,6 +1,6 @@
-<?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<xliff version="1.0" xmlns="urn:oasis:names:tc:xliff:document:1.1">
-	<file source-language="en" target-language="de" original="EXT:webcare/Resources/Private/Language/locallang.xlf" product-name="webcare" date="2020-05-14T11:48:56+02:00">
+<?xml version="1.0" encoding="UTF-8"?>
+<xliff version="1.2" xmlns:t3="http://typo3.org/schemas/xliff" xmlns="urn:oasis:names:tc:xliff:document:1.2">
+	<file source-language="en" target-language="de" original="EXT:webcare/Resources/Private/Language/locallang.xlf" datatype="plaintext" product-name="webcare" date="2023-04-27T19:19:39+02:00">
 		<body>
 			<trans-unit id="imprint" resname="imprint">
 				<source>Imprint from WebCare</source>
@@ -30,9 +30,21 @@
 				<source>WebCare</source>
 				<target>WebCare</target>
 			</trans-unit>
+			<trans-unit id="tsconsteditor_webcare_clientId" resname="tsconsteditor_webcare_clientId">
+				<source>Your client ID</source>
+				<target>Ihre Client ID</target>
+			</trans-unit>
 			<trans-unit id="tsconsteditor_webcare_initializeCookieConsent" resname="tsconsteditor_webcare_initializeCookieConsent">
 				<source>Automatically enable cookie consent: You may disable this option to initialize the consent manually via JavaScript. [window.cookieconsent.initialise(dr_cookiebanner_options)]</source>
 				<target>Cookie Consent automatisch initialisieren: Diese Option kann deaktiviert werden, um den Consent manuell mit JavaScript zu initialisieren. [window.cookieconsent.initialise(dr_cookiebanner_options)]</target>
+			</trans-unit>
+			<trans-unit id="tsconsteditor_webcare_organizationId" resname="tsconsteditor_webcare_organizationId">
+				<source>Your organization ID</source>
+				<target>Ihre Organisations ID</target>
+			</trans-unit>
+			<trans-unit id="tsconsteditor_webcare_websiteId" resname="tsconsteditor_webcare_websiteId">
+				<source>The website ID (optional)</source>
+				<target>Ihre Website ID (optional)</target>
 			</trans-unit>
 		</body>
 	</file>
