--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -1,6 +1,6 @@
-<?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<xliff version="1.0" xmlns="urn:oasis:names:tc:xliff:document:1.1">
-	<file source-language="en" original="EXT:webcare/Resources/Private/Language/locallang.xlf" product-name="webcare" date="2020-05-14T11:48:56+02:00">
+<?xml version="1.0" encoding="UTF-8"?>
+<xliff version="1.2" xmlns:t3="http://typo3.org/schemas/xliff" xmlns="urn:oasis:names:tc:xliff:document:1.2">
+	<file source-language="en" original="EXT:webcare/Resources/Private/Language/locallang.xlf" datatype="plaintext" product-name="webcare" date="2023-04-27T19:19:39+02:00">
 		<header></header>
 		<body>
 			<trans-unit id="imprint" resname="imprint">
